--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,11 +15,10 @@
   background-color: rgb(232, 234, 237);
   border-radius: 12px;
   padding: 32px 0px;
+  overflow-y: auto;
 }
-.app__todoContainer {
-  flex: 1;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.heading {
+  font-size: 1.4em;
+  margin-bottom: 1em;
 }
